--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,15 @@ html {
     --color-accent1: #212121;
     --color-accent2: #757575;
     --color-accent3: rgba(255, 255, 255, 0.6);
+    --color-background1: #e5e5e5;
+    --color-clients: #afb1b8;
+    
 
     --color-link: #2196F3;
 
     --font-family: 'Roboto', sans-serif;
     --font-second: 'Raleway', sans-serif;
+
 
 }
 body {
@@ -134,12 +138,12 @@ header {
 
 .adr {
     display: flex;
-
 }
 
 .adr-item {
     display: flex;
     margin-left: 50px;
+    align-items: center;
 }
 .adr-link
 {
@@ -159,6 +163,7 @@ header {
 .address-text:hover,
 .address-link:hover {
     color: var(--color-link);
+    text-decoration: underline;
 }
 .adr-link:hover .adr-icon {
     fill: var(--color-link);
@@ -216,14 +221,26 @@ section {
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(../images/head.jpg);
+ 
+}
+
+.overlay {
+    margin-left: auto;
+    margin-right: auto;
+    height: 600px;
+    max-width: 1600px;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background: rgba(47, 48, 58, 0.4); */
+    background-position: center; 
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)), 
+        url("../images/head.jpg");
 }
 
     
 /* Benefits */
+
 .benefits-list-inner {
     display: flex;
     justify-content: space-between;
@@ -274,11 +291,19 @@ section {
 }
 
 .benefits-icon {
-    display: flex;
     width: 70px;
     height: 70px;
     fill: var(--color-accent1);
-    padding: 25px auto;
+}
+
+.benefits-img {
+    display: flex;
+    width: 270px;
+    height: 120px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    background-color: var(--color-back-button);
 }
 
 /* About */
@@ -299,6 +324,10 @@ section {
 
 
 /* team */
+.team {
+    background-color: var(--color-back-button);
+}
+
 .team-inner {
     display: flex;
     justify-content: space-between;
@@ -307,6 +336,11 @@ section {
 .team-list {
     margin-right: 30px;
     padding-bottom: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+        0px 1px 1px rgba(0, 0, 0, 0.14), 
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--color-accent0);
 }
     
 .team-list:last-child {
@@ -325,17 +359,95 @@ section {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    margin-bottom: 16px;
 }
 
 .team-text, 
 .team-title {
     text-align: center;  
 }
+
+.social-list {
+    display: flex;
+    justify-content: center;
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--color-clients);
+}
+
+.social-button {
+    padding: 0;
+    border: 0;
+    background-color: var(--color-accent0);
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    
+}
+.social-item {
+    margin-right: 10px;
+}
+
+.social-button:last-child {
+    margin-right: 0;
+}
+
+.social-button:hover,
+.social-button:focus {
+    background-color: var(--color-link);
+}
+
+.social-button:hover .social-icon,
+.social-button:focus .social-icon {
+    fill: var(--color-accent0);
+}
+
+
+/* Clients */
+
+.clients-inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.client-icon {
+    width: 106px;
+    height: 60px;
+    fill: var(--color-clients);
+}
+
+.client-box {
+    box-sizing: border-box;
+    display: flex;
+    width: 170px;
+    height: 92px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    border: 1px solid var(--color-clients);
+    gap: 30px;
+
+}
+
+.client-box:hover,
+.client-box:focus {
+    cursor: pointer;
+}
+
+.client-box:hover .client-icon,
+.client-box:focus .client-icon{
+    fill: var(--color-link);
+}
+
 /* footer */
 
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
+    
 }
 address {
     margin-top: 20px;
@@ -357,13 +469,69 @@ address {
 }
 .address-link {
     color: var(--color-accent3);
-    
 }
 
 .First-head, 
 .footer {
-    background-color: var(--color-back);  
+    background-color: var(--color-back); 
 }
+
+.come-on-title {
+    text-transform: uppercase;
+    color: var(--color-accent0);
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    margin-bottom: 20px;
+    margin-top: 12px;
+}
+.footer-section {
+    display: flex;
+}
+
+.come-on {
+    margin-left: 70px;
+}
+
+.come-on-list {
+    display: flex;
+    
+}
+
+.come-on-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--color-accent0);
+}
+
+.come-on-button {
+    padding: 0;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    
+}
+.come-on-box {
+    margin-right: 10px;
+}
+
+.come-on-box:last-child {
+    margin-right: 0;
+}
+
+.come-on-button:hover,
+.come-on-button:focus {
+    background-color: var(--color-link);
+}
+
+.come-on-button:hover .come-on-icon,
+.come-on-button:focus .come-on-icon {
+    fill: var(--color-accent0);
+}
+
+
 /* Portfolio unic*/
 
 .button-container {
@@ -414,8 +582,14 @@ address {
 
 .portfolio-list {
     margin-right: 30px;
-    
     margin-bottom: 30px;
+}
+
+.portfolio-list:hover,
+.portfolio-list:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+                0px 4px 4px rgba(0, 0, 0, 0.06),
+                1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list:nth-child(3n) {
@@ -453,5 +627,4 @@ address {
     padding-top: 20px;
     padding-left: 24px;
     padding-right: 24px;
-
 }
